--- a/UICollectionViewDemo/Podfile
+++ b/UICollectionViewDemo/Podfile
@@ -1,5 +1,5 @@
-# platform :ios, '9.0'
+ platform :ios, '10.0'
 target 'UICollectionViewDemo' do
   use_frameworks!
-  pod 'Kingfisher', '~> 3.10.1'
+  pod 'Kingfisher'
 end
